--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
+  font: normal 100%/1.5 sans-serif;
 }
 
 *, *::before, *::after {
@@ -20,7 +21,28 @@ body {
   margin: 0;
 }
 
-.img-flex {
+img {
   display: block;
   width: 100%;
+}
+
+li {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 1.5 rem;
+
+}
+
+img {
+  width: 5rem;
+  /* padding: .5rem 1rem .6rem; */
+}
+
+hgroup {
+  width: 16rem;
+}
+
+p {
+  width: 24rem;
 }
