Change the font

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,9 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   font: normal 100%/1.5 sans-serif;
-  font: Open sans;
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5;
+  background-color: #ccc;
 }
 
 *, *::before, *::after {
@@ -25,23 +27,19 @@ body {
 img {
   display: block;
   width: 100%;
+  width: 5rem;
 }
 
 h2 {
+  padding-top: 2rem;
   text-align: center;
 }
 
 li {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 1.5rem;
-
-}
-
-img {
-  width: 5rem;
-  /* padding: .5rem 1rem .6rem; */
 }
 
 hgroup {
